--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-API_ID=
-API_HASH=
-BOT_TOKEN=
+API_ID=23226071
+API_HASH=01af2c26057ad9e7343c1536f755a75f
+BOT_TOKEN=6802905045:AAGTlTMGpgr8WsYGjiVCozlsr1rqdntCIfM
